# teg-revancha

./: .gitignore  configure.ac  stock_gresources.c  stock_gresources.h  teg-revancha
client/: ejer2.cpp  fichas.cpp  inputfd.cpp  misc.h  themes.cpp  themes.h
client/gui-gnome/: armies.cpp  cards.cpp  gui.cpp
client/themes/classic/: teg_theme.xml  translate.c
client/themes/m2/: Southamerica-Argentinia  Southamerica-Colombia  Southamerica-Venezuela  teg_theme.xml  translate.c
client/themes/sentimental/: Africa-Egipto  Africa-Etiopia  Africa-Madagascar  Africa-Mozambique  Africa-Nigeria  Africa-Sahara  Africa-Somalia  Africa-Sudafrica  America-Alaska  America-California  America-Canada  America-Chicago  America-Florida  America-Groenlandia  America-IslaVictoria  America-Labrador  America-LasVegas  America-Nuevayork  America-Oregon  America-Terranova  Asia-Arabia  Asia-Chechenia  Asia-China  Asia-Chukchi  Asia-Corea  Asia-India  Asia-Irak  Asia-Iran  Asia-Israel  Asia-Japon  Asia-Katchatka  Asia-Malaysia  Asia-Rusia  Asia-Siberia  Asia-Turquia  Asia-Vietnam  Australia-Australia  Australia-Filipinas  Australia-NuevaZelanda  Australia-Sumatra  (+34 more)
common/: common.cpp  common.h  cont.cpp  cont.h  country.cpp  country.h  limitrof.h  missions.cpp  missions.h  tarjeta.cpp  tarjeta.h
po/: POTFILES  es.po
robot/: ai.cpp  ai.h  ai_fichas.cpp  ai_msg.cpp  main.cpp
server/: missions.cpp
