pixmapdir=$(datadir)/pixmaps/teg_pix/themes/sentimental

pixmap_DATA =	\
	Africa-Egipto Africa-Etiopia Africa-Madagascar Africa-Sahara \
	Africa-Sudafrica Africa-Nigeria Africa-Somalia Africa-Mozambique America-Alaska \
	America-California America-Canada America-Groenlandia America-Labrador \
	America-LasVegas America-Nuevayork America-Oregon America-Terranova \
	America-Florida America-Chicago America-IslaVictoria \
	Asia-Arabia Asia-Chechenia Asia-China Asia-Irak Asia-India Asia-Iran \
	Asia-Israel Asia-Japon Asia-Katchatka Asia-Malaysia Asia-Rusia Asia-Corea \
	Asia-Siberia Asia-Chukchi Asia-Vietnam Asia-Turquia Australia-Australia \
	Australia-Filipinas Australia-Tonga Australia-Sumatra board.jpg cannon.png \
	Australia-Tasmania Australia-NuevaZelanda \
	dice-1.png dice-2.png dice-3.png dice-4.png dice-5.png dice-6.png \
	Europe-Alemania Europe-Espania Europe-Francia Europe-Grand_Bretania \
	Europe-Islandia Europe-Italia Europe-Polonia Europe-Croacia Europe-Serbia \
	Europe-Irlanda Europe-Albania Europe-Ucrania Europe-Belarus Europe-Finlandia \
	Europe-Noruega Europe-Portugal super.png \
	horse.png infantry.png Infobar.png jocker.png mini_shot.png \
	Southamerica-Argentinia Southamerica-Brasil Southamerica-Chile \
	Southamerica-Colombia Southamerica-Paraguay Southamerica-Uruguay \
	Southamerica-Bolivia Southamerica-Venezuela \
	Centroamerica-Nicaragua Centroamerica-ElSalvador Centroamerica-Honduras \
	Centroamerica-Mexico Centroamerica-Cuba Centroamerica-Jamaica \
	teg_theme.xml

EXTRA_DIST = $(pixmap_DATA) translate.c
